# WB-Design-Guidelines

./: .gitignore  README.md  powerbi_theme.json  pyproject.toml
.github/workflows/: deploy.yml
book/: _config.yml  _toc.yml  intro.md
book/_static/: custom.css  custom.js  palette-picker.css  palette-picker.js  wb-gallery.css  wb-gallery.js  wb-palettes.js  wb-utils.js
book/_templates/: layout.html
book/chapters/: chart-gallery.md  chart-guidelines.md  chart-rules.md  colors.md  components.md  dashboard-design.md  dashboard-ui.md  data-viz.md  design-system.md  gallery.md  icons.md  layout-and-spacing.md  palette-picker.md  palettes.md
data-viz/: README.md  palettes.json  palettes.md
design-guide/: README.md  colors.json  colors.md  components.md  typography.md
icons/: README.md
icons/wb-logos/: README.md
references/: README.md  styleguide.md
scripts/: build.bat  clean.bat  serve.bat
